Fixed overflow

--- a/css/about.css
+++ b/css/about.css
@@ -39,6 +39,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    max-width: 100%;
     height: 100%;
     margin: 0;
     transition: 2s ease;
@@ -223,6 +224,8 @@ nav ul li a:hover {
 
 .gallery-track {
   display: flex;
+  max-width: 80%;
+  width: 80%;
 }
 
 .marquee-container .gallery-item {
@@ -419,6 +422,10 @@ ul {
 section.gallery {
   padding: 40px 20px; /* Extra padding rondom de secties */
   margin-bottom: 50px; /* Grotere marge tussen secties */
+  border-top: 2px solid var(--border-color); /* Bovenste scheidingslijn */
+}
+
+#ervaringen-carousel {
   border-top: 2px solid var(--border-color); /* Bovenste scheidingslijn */
 }
 
